<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewSetupChallengeChallengeName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSetupChallengeEditChallenge"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonSetupChallengeEditChallenge"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:drawableStart="@mipmap/ic_edit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonActiveDeck"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="0dp"
        android:text="@string/active_deck"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCardDeck" />

    <Button
        android:id="@+id/buttonTotalDeck"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/total_deck"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toRightOf="@+id/buttonActiveDeck"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCardDeck" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="0dp"
        android:text="@string/easy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/medium"
        app:layout_constraintLeft_toRightOf="@+id/buttonEasy"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/hard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/buttonMedium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:drawableStart="@mipmap/ic_check"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedium"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/textViewCardDeck"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="75dp"
        android:text="@string/card_deck"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetupChallengeChallengeName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="89dp"
        android:text="@string/difficulty"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCardDeck" />
</android.support.constraint.ConstraintLayout>